--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <title>Ryan's Page</title>
+    <title>Portfolio | Ryan Adam</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
